CHANGES IN VERSION 0.99.4
------------------------
 o extract beast stats <2014-12-23, Tue>

CHANGES IN VERSION 0.99.3
------------------------
 o gplot function that can view a tree and an associated matrix simultaneously <2014-12-22, Mon>
 o modified vignette to show based on branch position and break the evolution distance scale <2014-12-22, Mon>
 o label and annotation can be put based on branch. <2014-12-22, Mon>
 o write.jplace and fully supports of jplace by ggtree. <2014-12-21, Sun>
 o support unrooted layout in ggplot. <2014-12-21, Sun>
 o support fan, radial, dendrogram layout in geom_tree. <2014-12-21, Sun>
 
CHANGES IN VERSION 0.99.2
------------------------
 o layout of unrooted tree, implemented equal-angle algorithm that described in Chapter 34 of 'Inferring Phylogenies' (page 578-580) <2014-12-20, Sat>
 o add layout parameter in ggtree and geom_tree, now supports phylogram and cladogram <2014-12-20, Sat>
 o %<+% function for inserting annotation data to a tree view <2014-12-20, Sat>
 o update ggtree-treeAnnotation vignette <2014-12-20, Sat>

CHANGES IN VERSION 0.99.1
------------------------
 o %<% function for updating tree view with a new tree <2014-12-19, Fri>
 o add examples in man files <2014-12-19, Fri>

CHANGES IN VERSION 0.2.3
------------------------
 o add README.md <2014-12-19, Fri>
 o update ggtree-treeViewer vignette <2014-12-19, Fri>
 o use BiocStyle in vignette <2014-12-19, Fri>
 o geom_nplace and geom_place layer <2014-12-18, Thu>
 o add theme_tree2 theme for showing evolution distance <2014-12-18, Thu>
 o rm.singleton.newick now supports internal node like:
   ((()X, ()Y)Z)AA, in which Z is a singleton. <2014-12-15, Mon>

CHANGES IN VERSION 0.2.2
------------------------
 o rm.singleton.newick <2014-12-09, Tue>
 o as.binary method <2014-12-09, Tue>
 o add treeinfo slot of jplace class <2014-12-08, Mon>
 o set.treeinfo and get.treeinfo functions  <2014-12-08, Mon>

CHANGES IN VERSION 0.2.1
------------------------